not in working state. Migrate more to backend

--- a/frontend/style/main.css
+++ b/frontend/style/main.css
@@ -24,7 +24,7 @@ body {
 
     image-rendering: pixelated;
 }
-
+/* 
 #ups-fps-dps {
     color: gray;
 
@@ -35,4 +35,4 @@ body {
 
     height: 2rem;
     font-size: 1.3rem;
-}
+} */
